--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reapomsive website</title>
-    <!-- Wosame.com link add blow -->
+    <title>Responsive website</title>
+    <!-- awesome.com link add blow -->
     <script src="https://kit.fontawesome.com/87688d6a5a.js" crossorigin="anonymous"></script>
      <!-- Responsive css link -->
      <link rel="stylesheet" href="responsive.css">
