--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div>
           <span>Tss-tech</span> 
         </div>
+             <input type="checkbox" id="click">
+             <label for="click" class="btn-click"><i class="fa-solid fa-bars"></i></label>
+      
          <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Gellary</a></li>
